# interprprprpr

./: CMakeLists.txt  README.md  executer.cpp  ident.cpp  ident.h  interpretator.cpp  interpretator.h  lex.cpp  lex.h  main.cpp  parser.cpp  parser.h  poliz.cpp  poliz.h  scanner.cpp  scanner.h  table_ident.cpp  table_ident.h  table_label.cpp  table_label.h  table_str.cpp  table_str.h  type_of_lex.h
